@@ -1,13 +1,9 @@
 package com.help.erpweb.domain.menu.service;
 
-import com.help.erpweb.domain.content.dto.request.repository.ContentDto;
-import com.help.erpweb.domain.content.entity.ContentEntity;
-import com.help.erpweb.domain.content.repository.ContentRepository;
-import com.help.erpweb.domain.menu.entity.MenuEntity;
-import com.help.erpweb.domain.menu.projection.MenuProjection;
-import com.help.erpweb.domain.metadata.response.ColumnMetaDto;
 import com.help.erpweb.domain.menu.dto.request.repository.MenuDto;
+import com.help.erpweb.domain.menu.projection.MenuProjection;
 import com.help.erpweb.domain.menu.repository.MenuRepository;
+import com.help.erpweb.domain.metadata.response.ColumnMetaDto;
 import com.help.global.authorization.Authorization;
 import com.help.global.common.response.ApiResponse;
 import com.help.global.data.MembershipID;
@@ -20,13 +16,18 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.stereotype.Service;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Slf4j
 public class MenuService {
+
     private final MenuRepository menuRepository;
     private final Authorization authorization;
 
@@ -46,29 +47,14 @@ public class MenuService {
         int normalizedSize = Math.max(size, 1);
 
         String recommender = null;
-        // 일반 사용자만 자신의 recommender를 구한다.
-        // 관리자는 null → Repository에서 전체 조회
+
         if (!authorization.isAdmin(user)) {
-            recommender = (String) entityManager
-                    .createNativeQuery("""
-                    SELECT Constellation_Network.search_sk(
-                        :cardType,
-                        :membershipId
-                    )
-                    """)
-                    .setParameter(
-                            "cardType",
-                            MembershipID.discord.name()
-                    )
-                    .setParameter(
-                            "membershipId",
+            recommender =
+                    findSkByDiscordId(
                             user.getUsername()
-                    )
-                    .getSingleResult();
+                    );
         }
-        /*
-         * metadata 조회
-         */
+
         List<ColumnMetaDto> metadata =
                 menuRepository.findColumnMetas(
                                 MenuRepository.schemaName,
@@ -83,9 +69,7 @@ public class MenuService {
                                         .build()
                         )
                         .toList();
-        /*
-         * metadata → 허용 컬럼
-         */
+
         Set<String> allowedColumns =
                 metadata.stream()
                         .map(ColumnMetaDto::getColName)
@@ -94,8 +78,6 @@ public class MenuService {
         Page<MenuProjection> menuPage =
                 menuRepository.findPage(
                         recommender,
-                        // API page는 1-based
-                        // Repository는 0-based
                         normalizedPage - 1,
                         normalizedSize,
                         searchColumn,
@@ -104,70 +86,155 @@ public class MenuService {
                         sortDirection,
                         allowedColumns
                 );
+
         List<MenuDto> menuList =
-                menuPage
-                        .getContent()
+                menuPage.getContent()
                         .stream()
                         .map(entity ->
                                 MenuDto.builder()
-                                        .mnValue(entity.getMnValue())
-                                        .recommender(entity.getRecommender())
-                                        .recommenderDiscordId(
-                                                entity.getRecommenderDiscordId()
+                                        .mnValue(
+                                                entity.getMnValue()
+                                        )
+                                        .recommender(
+                                                entity.getRecommender()
                                         )
                                         .build()
                         )
                         .toList();
 
-        Map<String, Object> body = new HashMap<>();
+        Map<String, Object> body =
+                new HashMap<>();
+
         body.put("metadata", metadata);
         body.put("entities", menuList);
         body.put("page", normalizedPage);
         body.put("size", normalizedSize);
-        body.put("totalElements", menuPage.getTotalElements());
-        body.put("totalPages", menuPage.getTotalPages());
-        body.put("hasNext", menuPage.hasNext());
+        body.put(
+                "totalElements",
+                menuPage.getTotalElements()
+        );
+        body.put(
+                "totalPages",
+                menuPage.getTotalPages()
+        );
+        body.put(
+                "hasNext",
+                menuPage.hasNext()
+        );
+
         return ApiResponse.success(body);
     }
 
     @Transactional
-    public ApiResponse<?> saveAll(CustomUser user, List<MenuDto> menuList) {
-        if (menuList == null || menuList.isEmpty())
-            return ApiResponse.success("No data to save");
-
-        List<String> results = new ArrayList<>();
-        for (MenuDto dto : menuList) {
-            String result = menuRepository.callMenuProcedure(
-                    MembershipID.discord.name(),
-                    user.getUsername(),
-                    dto.getMnValue()
+    public ApiResponse<?> saveAll(
+            CustomUser user,
+            List<MenuDto> menuList
+    ) {
+        if (menuList == null
+                || menuList.isEmpty()) {
+            return ApiResponse.success(
+                    "No data to save"
             );
-            results.add(dto.getMnValue()+" 추천 결과 : "+result);
         }
+
+        List<String> results =
+                new ArrayList<>();
+
+        for (MenuDto dto : menuList) {
+            String result =
+                    menuRepository.callMenuProcedure(
+                            MembershipID.discord.name(),
+                            dto.getRecommender(),
+                            dto.getMnValue()
+                    );
+
+            results.add(
+                    dto.getMnValue()
+                            + " 추천 결과 : "
+                            + result
+            );
+        }
+
         return ApiResponse.success(results);
     }
 
     @Transactional
-    public ApiResponse<?> deleteAll(CustomUser user, List<MenuDto> menuList) {
-        if (menuList == null || menuList.isEmpty())
-            return ApiResponse.success("No data to delete");
+    public ApiResponse<?> deleteAll(
+            CustomUser user,
+            List<MenuDto> menuList
+    ) {
+        if (menuList == null
+                || menuList.isEmpty()) {
+            return ApiResponse.success(
+                    "No data to delete"
+            );
+        }
 
-        String discordId = user.getUsername();
-        String recommender = (String) entityManager
-                .createNativeQuery("SELECT Constellation_Network.search_sk(:cardType, :membershipId)")
-                .setParameter("cardType", MembershipID.discord.name())
-                .setParameter("membershipId", discordId)
-                .getSingleResult();
+        int delCount = 0;
 
-        // teacher가 모두 동일하다는 전제에서만 사용 가능
-        List<String> values = menuList.stream()
-                .map(MenuDto::getMnValue)
-                .distinct()
-                .toList();
+        Map<String, List<String>> valuesByRecommender =
+                menuList.stream()
+                        .collect(
+                                Collectors.groupingBy(
+                                        MenuDto::getRecommender,
+                                        Collectors.mapping(
+                                                MenuDto::getMnValue,
+                                                Collectors.toList()
+                                        )
+                                )
+                        );
 
-        int totalCount = values.toArray().length;
-        int delCount = menuRepository.deleteByMnValue(recommender, values);
-        String result = "총 "+totalCount+"행 중 "+delCount+"행 삭제됨";
+        for (Map.Entry<String, List<String>> entry
+                : valuesByRecommender.entrySet()) {
+
+            String recommenderSk =
+                    findSkByDiscordId(
+                            entry.getKey()
+                    );
+
+            List<String> values =
+                    entry.getValue()
+                            .stream()
+                            .distinct()
+                            .toList();
+
+            delCount +=
+                    menuRepository.deleteByMnValue(
+                            recommenderSk,
+                            values
+                    );
+        }
+
+        int totalCount = menuList.size();
+
+        String result =
+                "총 "
+                        + totalCount
+                        + "행 중 "
+                        + delCount
+                        + "행 삭제됨";
+
         return ApiResponse.success(result);
+    }
+
+    private String findSkByDiscordId(
+            String discordId
+    ) {
+        return (String) entityManager
+                .createNativeQuery("""
+                    SELECT Constellation_Network.search_sk(
+                        :cardType,
+                        :membershipId
+                    )
+                """)
+                .setParameter(
+                        "cardType",
+                        MembershipID.discord.name()
+                )
+                .setParameter(
+                        "membershipId",
+                        discordId
+                )
+                .getSingleResult();
     }
 }
